syntax = "proto3";
option go_package = ".;proto";
//protoc --go_out=. --go-grpc_out=. order.proto
//protoc --go_out=. --go-grpc_out=require_unimplemented_servers=false:. order.proto
service Order{
  rpc GetOrderList(OrderRequest) returns(OrderListResponse); //查看地址
}

message OrderRequest{
  int32 currentPage = 1;
  int32 pageSize = 2;
  string ordid = 3;
  string mtlno = 4;
  string prodline = 5;
  string site = 6;
}

message  OrderResponse{
  string  acct = 1;
  string  acctclose = 2;
  float  addcost = 3;
  float  addcostx = 4;
  string  allowsplit = 5;
  float  assaypercentage = 6;
  string  autoplan = 7;
  string  baseid = 8;
  string  batch = 9;
  string  bdnup = 10;
  float  bdnvar = 11;
  string  bomcode = 12;
  float  bookedqty = 13;
  float  boqty = 14;
  string  erpbuffer = 15;
  string  chooseprint = 16;
  string  commitdate = 17;
  float  compqty = 18;
  string  costcenter = 19;
  string  create_time = 20;
  string  create_user = 21;
  string  cumlotid = 22;
  string  docid = 23;
  string  erpdomain = 24;
  string  dr = 25;
  string  draw = 26;
  string  dueenddate = 27;
  string  enddate = 28;
  string  engcode = 29;
  string  erpprechar1 = 30;
  string  erpprechar2 = 31;
  string  erpprechar3 = 32;
  string  erpprechar4 = 33;
  string  erppredate1 = 34;
  string  erppredate2 = 35;
  float  erppredec1 = 36;
  float  erppredec2 = 37;
  float  erppredec3 = 38;
  int64  erppreint1 = 39;
  int64  erppreint2 = 40;
  string  expiredate = 41;
  string  ficlosedate = 42;
  string  flccostcenter = 43;
  string  flracct = 44;
  string  flrsub = 45;
  string  fsmtype = 46;
  string  glbdnsign = 47;
  string  gllbrsign = 48;
  string  grade = 49;
  string  id = 50;
  string  isssite = 51;
  string  jointtype = 52;
  float  laborcost = 53;
  float  laborcostx = 54;
  string  last_modified = 55;
  string  last_modify_user = 56;
  string  lastrcddate = 57;
  string  lbrup = 58;
  float  lbrvar = 59;
  int64  leadtime = 60;
  float  linessqe = 61;
  string  erplocation = 62;
  string  lotnext = 63;
  string  memo = 64;
  float  mixvar = 65;
  float  mthdvar = 66;
  float  mtlcost = 67;
  float  mtlcostx = 68;
  string  mtlno = 69;
  float  mtlvar = 70;
  string  mvaracct = 71;
  string  mvarcc = 72;
  string  mvarsubacct = 73;
  string  mvrracct = 74;
  string  mvrrcc = 75;
  string  mvrrsubacct = 76;
  float  myldvar = 77;
  string  needdate = 78;
  int64  needtime = 79;
  string  oldid = 80;
  string  orddate = 81;
  string  orderno = 82;
  string  orderprint = 83;
  string  ordid = 84;
  float  ordqty = 85;
  string  ordtype = 86;
  float  erpoutput = 87;
  float  overheadcost = 88;
  float  overheadcostx = 89;
  string  perdate = 90;
  string  prechar1 = 91;
  string  prechar2 = 92;
  string  prechar3 = 93;
  string  prechar4 = 94;
  string  prechar5 = 95;
  float  precompqty = 96;
  string  predate1 = 97;
  string  predate2 = 98;
  float  predec1 = 99;
  float  predec2 = 100;
  float  predec3 = 101;
  float  predec4 = 102;
  float  prescrapqty = 103;
  string  priority = 104;
  string  process = 105;
  string  prodline = 106;
  float  productrate = 107;
  string  projectcode = 108;
  string  qtytype = 109;
  float  queuepercentage = 110;
  float  receiveqty = 111;
  string  recpstatus = 112;
  string  erpreference = 113;
  float  rejectcost = 114;
  string  reldate = 115;
  string  rev = 116;
  float  rjctqty = 117;
  string  schedulecode = 118;
  int64  seqno = 119;
  string  serial = 120;
  string  serno = 121;
  int64  setuptime = 122;
  float  shift = 123;
  string  singlesign = 124;
  string  site = 125;
  string  sojob = 126;
  string  staclosedate = 127;
  string  stacloseuserid = 128;
  string  startdate = 129;
  string  status = 130;
  string  subacct = 131;
  float  subvar = 132;
  string  svaracct = 133;
  string  svarcc = 134;
  string  svarsubacct = 135;
  string  svrracct = 136;
  string  svrrcc = 137;
  string  svrrsubacct = 138;
  string  techcode = 139;
  string  tenant_id = 140;
  string  toolcode = 141;
  float  transfercost = 142;
  float  transfercostx = 143;
  float  unitcost = 144;
  float  updatecost = 145;
  string  userid1 = 146;
  string  userid2 = 147;
  string  valid = 148;
  string  varsign = 149;
  string  vendorno = 150;
  int64  version = 151;
  float  wipcost = 152;
  string  xvaracct = 153;
  string  xvarcc = 154;
  string  xvarsubacct = 155;
  float  summrbnumber = 156;
  string  depcode = 157;
  float  amountmcv = 158;

}


message OrderListResponse {
  int32 currentPage = 1;
  int32 pageSize = 2;
  int32 total = 3;
  repeated OrderResponse data = 4;
}
